--- a/course3/conFusion/app/dishdetail.html
+++ b/course3/conFusion/app/dishdetail.html
@@ -30,8 +30,7 @@
                 <div class="media">
                     <div class="media-left media-middle">
                         <a href="#">
-                            <img class="media-object img-thumbnail"
-                                 ng-src={{dish.image}} alt="Uthappizza">
+                            <img class="media-object img-thumbnail" ng-src={{dish.image}} alt="Uthappizza">
                         </a>
                     </div>
                     <div class="media-body">
@@ -61,7 +60,6 @@
                 </ul>
             </div>
         </div>
-
     </div>
 
     <script src="../bower_components/angular/angular.min.js"></script>
