--- a/course3/conFusion/app/dishdetail.html
+++ b/course3/conFusion/app/dishdetail.html
@@ -9,11 +9,13 @@
          content must come *after* these tags -->
     <title>Ristorante Con Fusion: Menu</title>
         <!-- Bootstrap -->
+    <!-- build:css styles/main_dish.css -->
     <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="../bower_components/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="../bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="styles/bootstrap-social.css" rel="stylesheet">
     <link href="styles/mystyles.css" rel="stylesheet">
+    <!-- endbuild -->
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -62,6 +64,7 @@
         </div>
     </div>
 
+    <!-- build:js scripts/main_dish.js -->
     <script src="../bower_components/angular/angular.min.js"></script>
     <script>
         var app = angular.module('confusionApp',[]);
@@ -113,6 +116,7 @@
         });
 
     </script>
+    <!-- endbuild -->
 
 </body>
 
