--- a/course3/conFusion/app/menu.html
+++ b/course3/conFusion/app/menu.html
@@ -9,7 +9,7 @@
          content must come *after* these tags -->
     <title>Ristorante Con Fusion: Menu</title>
         <!-- Bootstrap -->
-    <!-- build:css styles/main.css -->
+    <!-- build:css styles/main_menu.css -->
     <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="../bower_components/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="../bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet">
@@ -72,7 +72,7 @@
         </div>
     </div>
 
-    <!-- build:js scripts/main.js -->
+    <!-- build:js scripts/main_menu.js -->
     <script src="../bower_components/angular/angular.min.js"></script>
     <script src="scripts/app.js"></script>
     <!-- endbuild -->
